<resources>
    <string name="app_name" translatable="false">Hijacker</string>
    <string name="DEFAULT_CHANNEL_ID" translatable="false">Hijacker_Notification_Channel</string>
    <string name="stop_aireplay">Stop Aireplay</string>
    <string name="copy_last_airodump_title">Copy last Airodump command</string>
    <string name="copy_last_aireplay_title">Copy last Aireplay command</string>
    <string name="copy_last_mdk_title">Copy last MDK command</string>
    <string name="copy_last_reaver_title">Copy last Reaver command</string>
    <string name="no_last_command_available">No last command available</string>
    <string name="incorrect_arch">Available only on ARM architectures, this is</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="install">Install</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="exit">Exit</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="select">Select</string>
    <string name="download">Download</string>
    <string name="size">Size</string>
    <string name="no_internet">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="nav_airodump">Airodump</string>
    <string name="nav_mdk3">MDK3</string>
    <string name="nav_reaver">Reaver</string>
    <string name="nav_crack">Crack .cap file</string>
    <string name="nav_custom_actions">Custom Actions</string>
    <string name="nav_settings">Settings</string>
    <string name="reaver_already_running">Reaver is already running</string>
    <string name="mac">MAC:</string>
    <string name="channel">Channel:</string>
    <string name="power">Power:</string>
    <string name="enc">Encryption:</string>
    <string name="auth">Authentication:</string>
    <string name="cipher">Cipher:</string>
    <string name="beacons">Beacons:</string>
    <string name="data">Data:</string>
    <string name="ivs">#s:</string>
    <string name="clients">Clients:</string>
    <string name="lastseen">Last seen:</string>
    <string name="essid">ESSID:</string>
    <string name="manuf">Manufacturer:</string>
    <string name="probes">Probes:</string>
    <string name="path_to_cap">.cap file</string>
    <string name="path_to_wordlist">Wordlist</string>
    <string name="start">Start</string>
    <string name="speed_test">Speed Test</string>
    <string name="wordlist_notfound">Wordlist not found</string>
    <string name="select_wpa_wep">Please select WPA/WEP</string>
    <string name="select_wep_bits">Select how many bits the key is</string>
    <string name="capfile_invalid">Capfile is invalid</string>
    <string name="wordlist_invalid">Wordlist is invalid</string>
    <string name="select_action">Select action</string>
    <string name="select_target">Select target</string>
    <string name="delete">Delete</string>
    <string name="action_delete_title">Delete Action?</string>
    <string name="action_delete_message">This action will be permanently deleted. Are you sure?</string>
    <string name="manage_actions">Manage actions…</string>
    <string name="edit">Edit…</string>
    <string name="requires_associated">Requires associated</string>
    <string name="requires_clients">Requires clients</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="start_cmd_empty">Start command cannot be empty</string>
    <string name="title_newline">Title cannot contain a newLine character</string>
    <string name="start_cmd_newline">Start command cannot contain a newLine character</string>
    <string name="stop_cmd_newline">Stop command cannot contain a newLine character</string>
    <string name="process_name_newline">Process name cannot contain a newLine character</string>
    <string name="process_name_empty">Process name cannot be empty</string>
    <string name="saved">Saved action</string>
    <string name="action_exists">An action with this name already exists</string>
    <string name="custom_action_editor_message">You can use the following variables:\n
        $IFACE, $AIRODUMP_DIR, $AIREPLAY_DIR, $MDK3_DIR, $REAVER_DIR\n
        AP: $MAC, $ESSID, $CH, $ENC, $CIPHER, $AUTH\n
        ST: $MAC, $BSSID\n
        The start command will be ran when you run the action and the stop will be ran ONLY when you want to interrupt it.
        These commands will run as root.\n
        Go back to discard any changes.</string>
    <string name="custom_action_title">Title</string>
    <string name="start_command">Start command</string>
    <string name="stop_command">Stop command</string>
    <string name="save">Save</string>
    <string name="access_point">Access Point</string>
    <string name="station">Station</string>
    <string name="kill_process_on_stop">Has process to kill when implicitly stopping the action</string>
    <string name="process_name">Process name</string>
    <string name="disclaimer_title">Disclaimer</string>
    <string name="disclaimer">It is extremely illegal to use this application against networks for which you don\'t have permission.
        You can use it only on YOUR network or a network that you are authorized to.
        I am not responsible for how you use this application and any damages you may cause.\nConsider yourself warned.</string>
    <string name="agree">I agree</string>
    <string name="not_agree">I don\'t agree</string>
    <string name="exit_dialog_title">Exit</string>
    <string name="exit_dialog_message">Airodump, aireplay and mdk will stop. Are you sure?</string>
    <string name="export">Export</string>
    <string name="export_title">Export…</string>
    <string name="output_file_title">Output file</string>
    <string name="visible">Visible</string>
    <string name="output_file_exists">File already exists. Long click to overwrite.</string>
    <string name="output_file_cant_write">Can\'t write to that file</string>
    <string name="output_file_exported">Exported</string>
    <string name="file_not_created">File could not be created</string>
    <string name="feedback">Feedback</string>
    <string name="include_report">Include a report</string>
    <string name="send_email">Send via email</string>
    <string name="folder_name">Folder name</string>
    <string name="folder_exists">A folder with this name already exists</string>
    <string name="show_ap">Show Access Points</string>
    <string name="show_st">Show Stations</string>
    <string name="show_st_na">Show non-associated stations</string>
    <string name="channels">2.4Ghz Channels:</string>
    <string name="all">All</string>
    <string name="opn">OPN</string>
    <string name="sort">Sort:</string>
    <string name="reverse_sort">Reverse</string>
    <string name="sort_nosort">No sorting</string>
    <string name="sort_essid">By ESSID</string>
    <string name="sort_beacons_frames">By beacons/frames</string>
    <string name="sort_data_frames">By data/frames</string>
    <string name="sort_pwr">By power</string>
    <string name="manuf_filter">Manufacturer Filter</string>
    <string name="first_run_title">Welcome</string>
    <string name="first_run">This application is a Graphical User Interface for the wireless auditing tools airodump-ng, aireplay-ng, aircrack-ng, mdk3 and reaver, and requires a Monitor Mode enabled WiFi interface.
        Only some android devices support this but none of them natively.
        You need to use a custom firmware (bcmon, Nexmon) so that your wireless adapter can be used in Monitor Mode. External adapters can also be used.
        You can configure your interface\'s name in Settings. This app requires root privileges to run the tools.
        \nYou can install the Nexmon firmware now, or you can go to the Home Screen.</string>
    <string name="install_firmware">Install Nexmon</string>
    <string name="firmware_location">Firmware Location:</string>
    <string name="device_chipset">Device Chipset:</string>
    <string name="util_location_text">Management Utility:</string>
    <string name="firmware_not_found">Firmware file not found</string>
    <string name="none_found">None found</string>
    <string name="backup_exists">A backup already exists</string>
    <string name="backup_created">Backup created</string>
    <string name="installed_firm_util">Installed firmware and utility</string>
    <string name="create_backup">Create Backup</string>
    <string name="error_extracting_firmware">An error occurred while extracting the firmware</string>
    <string name="error_extracting_utility">An error occurred while extracting nexutil</string>
    <string name="error_reading_mounts">Can\'t read /proc/mounts to determine system mounting point</string>
    <string name="error_remounting_system">Can\'t remount / or /system as read-write</string>
    <string name="field_required">This field is required</string>
    <string name="restore">Restore</string>
    <string name="restored">Backup restored</string>
    <string name="crack">Crack</string>
    <string name="stop">Stop</string>
    <string name="disconnect_all">Disconnect All</string>
    <string name="dos">DoS</string>
    <string name="cap_notfound">cap file not found</string>
    <string name="disconnect_started">Disconnect All started</string>
    <string name="watchdog_message">This could be caused by improper installation of the tools, WiFi card not in monitor mode or improperly installed/configured.</string>
    <string name="airodump_still_running">Airodump is still running!</string>
    <string name="airodump_not_running">Airodump is not running!</string>
    <string name="aireplay_still_running">Aireplay is still running!</string>
    <string name="aireplay_not_running">Aireplay is not running!</string>
    <string name="mdk_still_running">MDK3 is still running!</string>
    <string name="mdk_not_running">MDK3 is not running!</string>
    <string name="su_notfound_title">SU binary not found!</string>
    <string name="su_notfound">Hijacker could not detect a SU binary in a PATH accessible directory.\n\nThe app will exit.</string>
    <string name="no_root_access_title">No root access</string>
    <string name="no_root_access">Hijacker could not start SU with root privileges. Please make sure your device is rooted and you have granted Hijacker root access, and try again.</string>
    <string name="bin_not_created">Directory \'bin\' could not be created</string>
    <string name="lib_not_created">Directory \'lib\' could not be created</string>
    <string name="not_arm">The architecture of this device is not ARM. The included tools cannot be used.
        You will have to install the tools manually in a PATH accessible directory: aircrack-ng suite, busybox, mdk3, reaver, wireless-tools and libfakeioctl.so, and adjust the prefix for the library.</string>
    <string name="select_ap">Select Access Point</string>
    <string name="pixie_dust">Use pixie-dust (requires NetHunter chroot)</string>
    <string name="ignore_locked">Ignore Locked State reported by the AP</string>
    <string name="eap_fail">Terminate each session with EAP FAIL</string>
    <string name="small_dh">Use small DH keys to improve crack speed</string>
    <string name="no_nack">Don\'t send NACKs when out of order packets are received</string>
    <string name="pin_delay">PIN delay</string>
    <string name="locked_delay">Locked Delay</string>
        <string name="frames">Frames:</string>
        <string name="lost">Lost:</string>
        <string name="connected_to">Connected To:</string>
</resources>