<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/filter"
        android:icon="@drawable/filter"
        android:title="@string/filter"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/stop_run"
        android:icon="@drawable/stop"
        android:title="@string/stop"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/reset"
        android:title="@string/clear"
        android:icon="@drawable/clear"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/stop_aireplay"
        android:title="@string/stop_aireplay"
        android:icon="@drawable/stop_aireplay"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/export"
          android:title="@string/export_title"
          app:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>