<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:padding="5dp">

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/select_ap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_ap"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/pin_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pin_delay"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLines="1"
            android:text="1"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/locked_delay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/locked_delay"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:maxLines="1"
            android:text="60"/>

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/pixie_dust"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pixie_dust"
        android:checked="false"
        />

    <CheckBox
        android:text="@string/ignore_locked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ignore_locked"/>

    <CheckBox
        android:text="@string/eap_fail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eap_fail"/>

    <CheckBox
        android:text="@string/small_dh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/small_dh"/>

    <CheckBox
        android:text="@string/no_nack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/no_nack"/>

    <ScrollView
        android:id="@+id/console_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:padding="3dp">

        <TextView
            android:id="@+id/console"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="10sp" />
    </ScrollView>

    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/start_button"/>

</LinearLayout>
